--- a/functions/src/config.json.template
+++ b/functions/src/config.json.template
@@ -2,7 +2,6 @@
   "telegramBotToken": "1234567890:aBcDeFgHiJkLmNoPqRsTuVwXyZ123-aBcDe",
   "imgflipUsername": "abcdef",
   "imgflipPassword": "secret",
-  "imgflipToken": "abC/DeFgHiJkLmNoPqRsTuVwXyZaBcDeFgHiJkLm/a1=",
-  "imgflipCookie": "aBcDeFgHiJkLmNoPqRsTuVwXz1",
-  "selfUrl": "https://example.com/"
+  "selfUrl": "https://example.com/",
+  "maintainer": "some_telegram_user"
 }
