--- a/functions/package.json
+++ b/functions/package.json
@@ -14,15 +14,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "axios": "^0.19.2",
-    "firebase-admin": "8.11.0",
-    "firebase-functions": "3.6.1"
+    "axios": "0.19.2",
+    "firebase-admin": "8.12.1",
+    "firebase-functions": "3.7.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.6",
-    "firebase-functions-test": "^0.2.0",
-    "tslint": "^5.12.0",
-    "typescript": "^3.2.2"
+    "@types/cors": "2.8.6",
+    "firebase-functions-test": "0.2.1",
+    "tslint": "5.20.1",
+    "typescript": "3.9.5"
   },
   "private": true
 }
